[package]
name = "networking_basic"
version = "0.1.0"
edition = "2021"

[lib]
name = "networking_basic"
path = "src/lib.rs"

[[bin]]
name = "networking_basic"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
thiserror = "2.0.11"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
test-log = "0.2"
